--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 		</div>
 
-		<script async src="https://maps.googleapis.com/maps/api/js?callback=initMap"></script>
+		<script defer async src="https://maps.googleapis.com/maps/api/js?callback=initMap"></script>
 		<script src="js/knockout-3.2.0.js"></script>
   	 	<script src="js/map.js"></script>
 
