--- a/index.html
+++ b/index.html
@@ -1,91 +1,41 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta name="viewport" content="initial-scale=1.0">
-    	<meta charset="utf-8">
-		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/style.css">
-
-	</head>
-	<body>
-		<div class="container">
-
-			<div class="row header">
-				<div class="col-md-3 col-xs-12">
-					<button type="button" class="btn btn-primary btn-md" data-toggle="collapse" data-target="#sidebar" aria-expanded="true">
-						<span class="glyphicon glyphicon-menu-hamburger"></span>
-					</button>
-				</div>
-				<div class="col-md-9 col-xs-12">
-					<h1>NEIGHBORHOOD MAP PROJECT</h1>
-				</div>
-			</div>
-
-
-
-     		<div class="row" id="sidebar-wrapper">
-     			<div class="collapse in col-md-3 col-sm-4 col-xs-4" id="sidebar">
-
-     					<br/>
-     					<input id="search" placeholder="Search…" type="search" data-bind="textInput: query, valueUpdate: 'keyup'" autocomplete="off">
-
-
-					    <button type="submit" class="btn btn-default">Submit</button>
-					    <br/><br/>
-			        	<ul data-bind="foreach: places" class="list-group" >
-				            <li class="list-group-item">
-				            	<span data-bind="text: $data.name, click: listClick"> </span>
-
-				            </li>
-			        	</ul>
-	       		</div>
-
-
-			    <div id="map" class="col-md-12" >
-
-			    </div>
-
-
-		    </div>
-
-		</div>
-		<script src="js/jquery-2.2.3.min%20.js"></script>
-		<script src="bootstrap/js/bootstrap.min.js"></script>
-		<script defer async src="https://maps.googleapis.com/maps/api/js?callback=initMap"></script>
-		<script src="js/knockout-3.2.0.js"></script>
-  	 	<script src="js/map.js"></script>
-
-	</body>
+   <head>
+      <meta name="viewport" content="initial-scale=1.0">
+      <meta charset="utf-8">
+      <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+      <link rel="stylesheet" href="css/style.css">
+   </head>
+   <body>
+      <div class="container">
+         <div class="row header">
+            <div class="col-md-3 col-xs-12">
+               <button type="button" class="btn btn-primary btn-md" data-toggle="collapse" data-target="#sidebar" aria-expanded="true">
+               <span class="glyphicon glyphicon-menu-hamburger"></span>
+               </button>
+            </div>
+            <div class="col-md-9 col-xs-12">
+               <h1>NEIGHBORHOOD MAP PROJECT</h1>
+            </div>
+         </div>
+         <div class="row" id="sidebar-wrapper">
+            <div class="collapse in col-md-3 col-sm-4 col-xs-4" id="sidebar">
+               <br/>
+               <input id="search" placeholder="Search…" type="search" data-bind="textInput: query, valueUpdate: 'keyup'" autocomplete="off">
+               <br/><br/>
+               <ul data-bind="foreach: places" class="list-group" >
+                  <li class="list-group-item" data-bind="text: $data.name, click: listClick">
+                  </li>
+               </ul>
+            </div>
+            <div id="map" class="col-md-12" >
+            </div>
+         </div>
+      </div>
+      <script src="js/jquery-2.2.3.min%20.js"></script>
+      <script src="bootstrap/js/bootstrap.min.js"></script>
+      <script defer async src="https://maps.googleapis.com/maps/api/js?callback=initMap"></script>
+      <script src="js/knockout-3.2.0.js"></script>
+      <script src="js/map.js"></script>
+   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
